Complete Notebook 05: Baseline neural network with embedding layers and comprehensive reflections
✅ Major Accomplishments:
- Successfully implemented SimpleNN class with embedding layers and mean pooling
- Created complete neural network architecture: Word IDs → Embeddings → Masking → Pooling → Classification
- Instantiated model with proper parameters: vocab_size, n_aspects=3, embedding_dim=50
- Set up training components: CrossEntropyLoss + Adam optimizer (lr=0.005)

🧠 Deep Conceptual Understanding:
- Embedding layer learns spatial positions based on semantic meaning and proximity
- Mean pooling preserves information from all words, creating comprehensive review summaries
- Masking prevents padding tokens from diluting semantic meaning in pooling
- Architecture elegantly handles variable-length sequences → fixed-size representations

📊 Technical Implementation:
- Model architecture: SimpleNN with embedding, masking, mean pooling, and two linear layers
- Tensor flow: [batch, seq] → [batch, seq, embed] → [batch, embed] → [batch, n_aspects]
- Training setup: CrossEntropyLoss for multi-class classification, Adam optimizer
- Ready for training loop implementation in Notebook 06

🎯 Learning Insights:
- Understanding embedding layer purpose: spatial relationships and semantic meaning
- Grasping pooling necessity: 3D → 2D tensor conversion for linear layers
- Recognizing architecture suitability: manages embeddings, shapes, and multi-class prediction
- Appreciating mean vs max pooling trade-offs: comprehensive vs selective information

📝 Updated README with:
- Phase 5 completion status
- Baseline neural network achievements documented
- Next phase: training loop implementation and baseline evaluation

🎯 Phase 5 Complete: Baseline neural network implementation
Next: Training loop implementation and baseline evaluation

--- a/notebooks/05_simpleNN_with_embedding.ipynb
+++ b/notebooks/05_simpleNN_with_embedding.ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +75,27 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "class SimpleNN(nn.Module):\n",
+        "    def __init__(self, vocab_size, output_size,embed_size=50, hidden_size=100, pad_id=0):\n",
+        "        super(SimpleNN, self).__init__()\n",
+        "        self.embedding = nn.Embedding(vocab_size, embed_size, padding_idx=pad_id)\n",
+        "        self.fc1 = nn.Linear(embed_size, hidden_size)\n",
+        "        self.relu = nn.ReLU()\n",
+        "        self.fc2 = nn.Linear(hidden_size, output_size)\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        x = self.embedding(x)\n",
+        "        embedded = self.embedding(x)  # [16, 128, 50]\n",
+        "        mask = (x != self.pad_id).unsqueeze(-1).float()  # [16, 128, 1]\n",
+        "        masked_embedded = embedded * mask  # [16, 128, 50]\n",
+        "        pooled = masked_embedded.sum(dim=1) / mask.sum(dim=1).clamp(min=1)  # [16, 50]\n",
+        "\n",
+        "\n",
+        "        x = self.fc1(pooled)\n",
+        "        x = self.relu(x)\n",
+        "        x = self.fc2(x)\n",
+        "        return x\n"
       ]
     },
     {
@@ -99,12 +119,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# TODO #2: Implement forward pass\n",
-        "# Add your forward method implementation to the class above\n"
+        "# Add your forward method implementation to the class above\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "\n",
+        "# Your code here\n",
+        "class SimpleNN(nn.Module):\n",
+        "    def __init__(self, vocab_size, output_size,embed_size=50, hidden_size=100, pad_id=0):\n",
+        "        super(SimpleNN, self).__init__()\n",
+        "        self.embedding = nn.Embedding(vocab_size, embed_size, padding_idx=pad_id)\n",
+        "        self.fc1 = nn.Linear(embed_size, hidden_size)\n",
+        "        self.relu = nn.ReLU()\n",
+        "        self.fc2 = nn.Linear(hidden_size, output_size)\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        x = self.embedding(x)\n",
+        "        embedded = self.embedding(x)  # [16, 128, 50]\n",
+        "        mask = (x != self.pad_id).unsqueeze(-1).float()  # [16, 128, 1]\n",
+        "        masked_embedded = embedded * mask  # [16, 128, 50]\n",
+        "        pooled = masked_embedded.sum(dim=1) / mask.sum(dim=1).clamp(min=1)  # [16, 50]\n",
+        "\n",
+        "\n",
+        "        x = self.fc1(pooled)\n",
+        "        x = self.relu(x)\n",
+        "        x = self.fc2(x)\n",
+        "        return x\n"
       ]
     },
     {
@@ -130,12 +174,108 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[('the', 1009), ('a', 423), ('of', 405), ('and', 399), ('to', 295), ('is', 295), ('in', 235), ('it', 191), ('s', 147), ('that', 140)]\n",
+            "[('<PAD>', 0), ('<UNK>', 1), ('the', 2), ('a', 3), ('of', 4), ('and', 5), ('to', 6), ('is', 7), ('in', 8), ('it', 9)]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Comes from the previous notebooks\n",
+        "import pandas as pd\n",
+        "import re\n",
+        "from collections import Counter\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
+        "\n",
+        "def pad_or_truncate(sequence, max_len, padding_value=0):\n",
+        "    \"\"\"\n",
+        "    Pads or truncates a sequence to a specified target length.\n",
+        "\n",
+        "    Parameters:\n",
+        "    sequence (list): The input sequence to be padded or truncated.\n",
+        "    target_length (int): The desired length of the output sequence.\n",
+        "    padding_value (any): The value to use for padding if the sequence is shorter than the target length.\n",
+        "\n",
+        "    Returns:\n",
+        "    list: The padded or truncated sequence.\n",
+        "    \"\"\"\n",
+        "    if len(sequence) < max_len:\n",
+        "        # Pad the sequence\n",
+        "        return sequence + [padding_value] * (max_len - len(sequence))\n",
+        "    else:\n",
+        "        # Truncate the sequence\n",
+        "        return sequence[:max_len]\n",
+        "\n",
+        "# Test the function\n",
+        "sample_sequence = [1, 2, 3]\n",
+        "padded_sequence = pad_or_truncate(sample_sequence, 5, padding_value=0)\n",
+        "truncated_sequence = pad_or_truncate(sample_sequence, 2)\n",
+        "\n",
+        "def tokenize(text):\n",
+        "    # Use regex to find words, ignoring punctuation\n",
+        "    tokens = re.findall(r'\\b\\w+\\b', text.lower())\n",
+        "    return tokens\n",
+        "\n",
+        "train_reviews_df = pd.read_csv('../data/imdb_movie_reviews_train.csv')\n",
+        "test_reviews_df = pd.read_csv('../data/imdb_movie_reviews_test.csv')\n",
+        "\n",
+        "tokenized_corpus_train = train_reviews_df['review'].apply(tokenize).tolist() \n",
+        "tokenized_corpus_test = test_reviews_df['review'].apply(tokenize).tolist()\n",
+        "\n",
+        "combined_corpus = [token for sublist in tokenized_corpus_train + tokenized_corpus_test for token in sublist]\n",
+        "\n",
+        "word_freqs = Counter(combined_corpus)\n",
+        "print(word_freqs.most_common(10))\n",
+        "\n",
+        "max_vocab_size = 1002\n",
+        "most_common_words = word_freqs.most_common(max_vocab_size - 2)  # Reserve 2 for <PAD> and <UNK>\n",
+        "vocab = {'<PAD>': 0, '<UNK>': 1, **{word: idx + 2 for idx, (word, _) in enumerate(most_common_words)}}\n",
+        "print(list(vocab.items())[:10])  # Print first 10 items in vocabulary dictionary\n",
+        "vocab_size = len(vocab)\n",
+        "\n",
+        "def encode_text(text, vocab):\n",
+        "    tokens = tokenize(text)\n",
+        "    encoded = [vocab.get(token, vocab['<UNK>']) for token in tokens]\n",
+        "    return encoded\n",
+        "\n",
+        "encoded_reviews_train = train_reviews_df['review'].apply(lambda x: encode_text(x, vocab)).tolist()\n",
+        "encoded_reviews_test = test_reviews_df['review'].apply(lambda x: encode_text(x, vocab)).tolist()\n",
+        "\n",
+        "max_sequence_length = 128\n",
+        "padded_encoded_reviews_train = [pad_or_truncate(seq, max_sequence_length, padding_value=vocab['<PAD>']) for seq in encoded_reviews_train]\n",
+        "padded_encoded_reviews_test = [pad_or_truncate(seq, max_sequence_length, padding_value=vocab['<PAD>']) for seq in encoded_reviews_test]\n",
+        "X_tensor_train = torch.tensor(padded_encoded_reviews_train, dtype=torch.long)\n",
+        "X_tensor_test = torch.tensor(padded_encoded_reviews_test, dtype=torch.long)\n",
+        "y_tensor_train = torch.tensor(train_reviews_df['aspect_encoded'].values, dtype=torch.long)\n",
+        "y_tensor_test = torch.tensor(test_reviews_df['aspect_encoded'].values, dtype=torch.long)\n",
+        "\n",
+        "batch_size = 16\n",
+        "train_dataset = TensorDataset(X_tensor_train, y_tensor_train)\n",
+        "test_dataset = TensorDataset(X_tensor_test, y_tensor_test)\n",
+        "\n",
+        "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
         "# TODO #3: Instantiate model and training components\n",
-        "# Your code here\n"
+        "# Your code here\n",
+        "n_aspects = 3\n",
+        "\n",
+        "model = SimpleNN(vocab_size=len(vocab), output_size=n_aspects)\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)"
       ]
     },
     {
@@ -158,9 +298,71 @@
         "- How does mean pooling handle variable-length sequences?\n",
         "- What would happen if you used max pooling instead of mean pooling?\n",
         "\n",
+        "## 📝 Reflection Prompts\n",
+        "\n",
+        "### 🤔 Understanding Check\n",
+        "1. **Why mask padding tokens in mean pooling?** What would happen if you included padding in the average?\n",
+        "\n",
+        "2. **What does the embedding layer actually learn?** How does it differ from one-hot encoding?\n",
+        "\n",
+        "3. **Why use mean pooling instead of just taking the last token?** What information would you lose?\n",
+        "\n",
+        "4. **How does the embedding dimension (50) affect model capacity?** What's the tradeoff?\n",
+        "\n",
+        "### 🎯 Architecture Design\n",
+        "- Why is this architecture well-suited for text classification?\n",
+        "- How does mean pooling handle variable-length sequences?\n",
+        "- What would happen if you used max pooling instead of mean pooling?\n",
+        "\n",
         "---\n",
         "\n",
-        "**Write your reflections here:**\n"
+        "## 📝 My Reflections\n",
+        "\n",
+        "### 🤔 Understanding Check Answers\n",
+        "\n",
+        "1. **Why mask padding tokens in mean pooling?**\n",
+        "   - Masking prevents padding tokens from contributing to the average\n",
+        "   - Without masking, we'd average real tokens + padding tokens, diluting the semantic meaning\n",
+        "   - Padding tokens (0s) should be excluded from the mean calculation to preserve the true representation\n",
+        "\n",
+        "2. **What does the embedding layer actually learn?**\n",
+        "   - The embedding layer learns the ideal spatial positions that words should occupy based on their semantic meaning and proximity\n",
+        "   - Words with similar meanings get closer spatial positions in the 50-dimensional space\n",
+        "   - Meaning becomes a mathematical formula where spatial differences translate into semantic relationships\n",
+        "   - The 50 dimensions represent 50 potential spatial positions per token that can be related to other tokens\n",
+        "\n",
+        "3. **Why use mean pooling instead of just taking the last token?**\n",
+        "   - **Mean pooling**: Preserves information from all words, creating a comprehensive summary of the entire review\n",
+        "   - **Last token only**: Would lose information from all other words in the sequence\n",
+        "   - Mean pooling handles variable length sequences by averaging across all tokens\n",
+        "   - Taking only the last token would create huge discrepancies and lose semantic richness\n",
+        "\n",
+        "4. **How does the embedding dimension (50) affect model capacity?**\n",
+        "   - More embeddings don't necessarily mean more accuracy - it's a computational trade-off\n",
+        "   - 50 dimensions provide a good balance between representation capacity and computational efficiency\n",
+        "   - Higher dimensions require more computational power for gradient calculations during training\n",
+        "   - The key is finding the right balance for the specific task\n",
+        "\n",
+        "### 🎯 Architecture Design Analysis\n",
+        "\n",
+        "**Why this architecture is well-suited for text classification:**\n",
+        "- Manages embeddings, handles shape differences between layers, and enables multi-class prediction\n",
+        "- The flow: Word IDs → Embeddings → Masking → Pooling → Classification\n",
+        "- Each step serves a specific purpose in converting text to predictions\n",
+        "\n",
+        "**How mean pooling handles variable-length sequences:**\n",
+        "- Mean pooling aggregates the entire sequence into a fixed-size vector\n",
+        "- Handles variable length sequences by averaging across all tokens\n",
+        "- Preserves semantic information from all words rather than just the strongest\n",
+        "- Creates a \"summary\" representation of the entire review\n",
+        "\n",
+        "**What would happen with max pooling instead:**\n",
+        "- Max pooling would only consider the strongest/most important word\n",
+        "- Would lose information from other words in the sequence\n",
+        "- Could create huge discrepancies and lose the semantic richness of the text\n",
+        "- Would not provide a comprehensive representation of the entire review\n",
+        "\n",
+        "**Key insight:** This architecture elegantly handles the fundamental challenge of converting variable-length text sequences into fixed-size representations that neural networks can process, while preserving semantic meaning through learned embeddings and intelligent pooling strategies.\n"
       ]
     }
   ],
